# foray-denoiser-asvgf

./: .gitignore  CMakeLists.txt  readme.md
src/: foray_asvgf.cpp  foray_asvgf.hpp  foray_asvgf_atrous.cpp  foray_asvgf_atrous.hpp  foray_asvgf_atrousgradient.cpp  foray_asvgf_atrousgradient.hpp  foray_asvgf_creategradientsamples.cpp  foray_asvgf_creategradientsamples.hpp  foray_asvgf_estimatevariance.cpp  foray_asvgf_estimatevariance.hpp  foray_asvgf_temporalaccumulation.cpp  foray_asvgf_temporalaccumulation.hpp  foray_svgf.cpp  foray_svgf.hpp  foray_svgf_atrous.cpp  foray_svgf_atrous.hpp  foray_svgf_atrousgradient.cpp  foray_svgf_atrousgradient.hpp  foray_svgf_creategradientsamples.cpp  foray_svgf_creategradientsamples.hpp  foray_svgf_estimatevariance.cpp  foray_svgf_estimatevariance.hpp  foray_svgf_temporalaccumulation.cpp  foray_svgf_temporalaccumulation.hpp
src/shaders/: asvgf_shared.glsl  atrous.comp  atrousgradient.comp  creategradientsamples.comp  creategradientsamples.comp.spv  debug.glsl.h  debugstrata.glsl  estimatevariance.comp  kernel_shared.glsl  temporalaccumulation.comp
